v1.2.2.357
- error page: back link when referer, refresh link only on GET
- LoadCopy by library file signature to avoid multiple copies being loaded, retries on access denied
- default xxmSession on TStringList (sorted!) instead of TObjectList
- parser: in code, treat lines that start with "<" and end with ">" as HTML
- xxmHttp: thread to wait on groups of (slow) connections that have all content in buffer
- xxmHttp: support basic authentication (401, "WWW-Authenticate: Basic")
- xxmLocal: custom handling of WWW-Authenticate, when debugging hold 'X' on authenticated page load to clear stored credentials

v1.2.1.337
- xxmHttp: IPv6 support
- xxmHttp: support OPTIONS, HEAD, TRACE
- xxmISAPI: fixed initialization issue
- fixed issue mapping error line numbers on files in a deeper folder
- fixed issue with BufferSize and smaller responses

v1.2.0.325
- revised internal send/buffer logic
- when Context.BufferSize is set, don't send header rightaway, and add Content-Length when all of content fits in buffer
- xxmHttp: fixed issue when posting 1MB or more
- demo 03 ADO: switched query store to plain SQL file
- AutoBuild: errors shown on local path to xxm file instead of .pas filename
- URLEncode([]) and [[?]] syntax
- extra block prefixes for use with parser values: & % . , ;

v1.1.9.300
- sourceforge repository caught up with previous private repo, so version build number will now follow svn revision number
- support for If-Modified-Since, If-Unmodified-Since headers
- serving content-files uses FILE_FLAG_SEQUENTIAL_SCAN
- xxmHttp: switched to custom winsock wrapper
- xxmHttp: central holding for 'keep' connections awaiting requests
- xxmLocal: fixed issue with first request for a static file after reload
- fixed issue with multi-byte ANSI encodings

v1.1.8.295
- optional project interface: IXxmProjectEvents1
- parser values: $l replaced by source line number, $v by current, $d by default
- set project default parser values from Web.xxmp